<package format="2">
  <name>tictactoe</name>
  <version>0.1.0</version>
  <description>
     tictactoe
  </description>
  <author>Álvaro Castro González ‎[acgonzal@ing.uc3m.es]‎</author>
  <maintainer email="olivier.mangin@yale.edu">Olivier Mangin</maintainer>
  <maintainer email="alessandro.roncone@yale.edu">Alessandro Roncone</maintainer>
  <license>GNU GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  
  <depend>std_msgs</depend>
  <depend>rosconsole</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>ttt_board_sensor</depend>
  <depend>baxter_core_msgs</depend>
  <depend>sound_play</depend>
  <exec_depend>usb_cam</exec_depend>
</package>


