<package format="2">
  <name>tictactoe</name>
  <version>0.8.0</version>
  <description>
    # How to run this demo : a step by step tutorial

    ## Initialization

      * Obvious stuff:
        * make sure the Baxter is on
        * make sure the computer is on
        * make sure the Baxter and the computer are connected together
        * make sure the computer has some working speakers

    ## Run the demo
      * Open a terminal:
        * `cd` to `~/ros_ws`
        * `source devel/setup.bash`
        * `./baxter.sh` (this has to be done with any terminal that will interface with the Baxter)
        * `rosrun baxter_tools tuck_arms.py -u`
        * `roslaunch tictactoe tictactoe.launch`

    ## Shut down the robot
      * Open a terminal:
        * `cd` to `~/ros_ws`
        * `source devel/setup.bash`
        * `./baxter.sh` (this has to be done with any terminal that will interface with the Baxter)
        * `rosrun baxter_tools tuck_arms.py -t`


  </description>
  <author>Álvaro Castro González ‎[acgonzal@ing.uc3m.es]‎</author>
  <maintainer email="olivier.mangin@yale.edu">Olivier Mangin</maintainer>
  <maintainer email="alessandro.roncone@yale.edu">Alessandro Roncone</maintainer>
  <license>GNU GPL v2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  
  <depend>std_msgs</depend>
  <depend>rosconsole</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>ttt_board_sensor</depend>
  <depend>baxter_core_msgs</depend>
  <depend>sound_play</depend>
  <exec_depend>usb_cam</exec_depend>
</package>


